# yandex_music_tui

./: Cargo.toml  perf.data  perf.data.old
src/: api.rs  main.rs  player.rs
